--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css" type="text/css" />
-  <script type="text/javascript" src="main.js" defer></script>
   <title></title>
 </head>
 
@@ -39,6 +38,12 @@
       <output id="result" type="number"></output>
     </div> -->
   </fieldset>
+
+  <script
+          src="https://code.jquery.com/jquery-3.2.1.min.js">
+  </script>
+
+  <script src='main.js'></script>
 
 </body>
 
